--- a/.github/helm/templates/service.yml
+++ b/.github/helm/templates/service.yml
@@ -7,7 +7,8 @@ spec:
   selector:
     app: fastapi-sample-dep
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 3050
       
