--- a/.github/helm/templates/service.yml
+++ b/.github/helm/templates/service.yml
@@ -7,8 +7,7 @@ spec:
   selector:
     app: fastapi-sample-dep
   ports:
-    - name: http
-      protocol: TCP
+    - protocol: TCP
       port: 80
       targetPort: 3050
       
